# membrane-cli

./: .gitignore  Cargo.toml  README.md
src/: core.rs  global.rs  main.rs  memfs.rs  sweep.rs
src/commands/: add.rs  brane.rs  checkout.rs  delete.rs  keys_rename.rs  mod.rs  prune.rs  push.rs  register.rs  set.rs  show.rs  show_model.rs  sweep_cmd.rs  unset.rs
src/utils/: banner.rs  input.rs  mod.rs  parse.rs  project_writer.rs  render.rs  resolve.rs  table.rs
