[package]
name = "membrane-cli"
version = "0.1.0"
edition = "2021"
description = "Schema-optional, file-based project memory system"
license = "MIT"
repository = "https://github.com/andrewrgarcia/membrane-cli"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.5"
anyhow = "1.0"
chrono = "0.4"
colored = "2.1"
anstyle = "1.0"

[[bin]]
name = "mem"
path = "src/main.rs"
