[package]
name = "membrane-cli"
version = "0.4.2"
edition = "2021"
authors = ["Andrew Garcia"]
description = "Schema-optional, file-based project memory system"
license = "MIT"
repository = "https://github.com/andrewrgarcia/membrane-cli"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }
indexmap = { version = "2", features = ["serde"] }
serde_yaml = "0.9"
walkdir = "2.5"
anyhow = "1.0"
chrono = "0.4"
colored = "2.1"
anstyle = "1.0"
dirs = "6.0.0"

[[bin]]
name = "me"
path = "src/main.rs"
